--- a/application/admin/view/import/first.html
+++ b/application/admin/view/import/first.html
@@ -131,7 +131,7 @@
             fd.append("tname", $("#tname").val())
             $.ajax({
                 method: "post",
-                url: "{:url('admin/import/upload')}",
+                url: "{:url('admin/Import/first')}",
                 data: fd,
                 cache: false,
                 processData: false,
