--- a/application/admin/view/import/second.html
+++ b/application/admin/view/import/second.html
@@ -209,7 +209,7 @@
             // var data =$.param({ 'myData': myData, 'ifUseData': ifUseData, 'primaryKey': primaryKey })
             $.ajax({
                 method: "post",
-                url: "{:url('admin/import/createtemplateSecond')}",
+                url: "{:url('admin/import/Second')}",
                 data: $("form").serialize(),
                 dataType: 'json',
                 success: function (data) {
