--- a/application/admin/view/templates/add.html
+++ b/application/admin/view/templates/add.html
@@ -17,7 +17,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <a href="{:url('admin/Import/createTemplateFirst')}" style="margin-right: 10px;">
+                                <a href="{:url('admin/Import/First')}" style="margin-right: 10px;">
                                     <button class="btn btn-primary btn-lg">文件导入</button>
                                 </a>
                                 <a href="{:url('admin/Hand/index')}">
