--- a/application/admin/view/my_data/index.html
+++ b/application/admin/view/my_data/index.html
@@ -15,6 +15,7 @@
                 <span class="widget-caption">数据集列表</span>
             </div>
             <div class="widget-body">
+                <div class="alert alert-info" style="font-size: 16px;">在初始化表单时可以为唯一字段指定自定义数据集，不在数据集中的数据无法提交</div>
                 <div class="table-responsive">
                     <table class="table table-hover table-bordered text-nowrap" style="padding: 2px;font-size: 10px;">
                         <thead>
