--- a/application/admin/view/templates/add.html
+++ b/application/admin/view/templates/add.html
@@ -6,7 +6,7 @@
 {block name="page-main"}
 
 <div class="row">
-    <div class="col-xs-6">
+    <div class="col-lg-6">
         <div class="widget radius-bordered">
             <div class="widget">
                 <div class="bg-themeprimary widget-header">
