--- a/application/admin/view/home/index.html
+++ b/application/admin/view/home/index.html
@@ -37,6 +37,11 @@
                         <span>我的数据</span>
                     </div>
                 </a>
+                <a class="loginout">
+                    <div class="col-xs-1 fun_grid">
+                        <span>退出</span>
+                    </div>
+                </a>
                 {if session('admin.is_super')==1}
                 <a href="{:url('admin/Admin/list')}">
                     <div class="col-xs-1 fun_grid">
