--- a/application/admin/view/public/_footer.html
+++ b/application/admin/view/public/_footer.html
@@ -142,8 +142,9 @@
             });
         }
     }
+    
     $(function () {
-        $("#loginout").click(function () {
+        $(".loginout").click(function () {
             $.ajax({
                 url: "{:url('admin/Home/logout')}",
                 type: "post",
@@ -159,7 +160,4 @@
             return false;
         });
     });
-
-
-
 </script>
