--- a/application/admin/view/public/admin_base.html
+++ b/application/admin/view/public/admin_base.html
@@ -48,7 +48,7 @@
                                 <!--Login Area Dropdown-->
                                 <ul class="pull-right dropdown-menu dropdown-arrow dropdown-login-area">
                                     <li class="dropdown-footer">
-                                        <a href="#" id="loginout">退出</a>
+                                        <a href="#" class="loginout">退出</a>
                                     </li>
                                 </ul>
                                 <!--/Login Area Dropdown-->
