--- a/application/admin/view/import/first.html
+++ b/application/admin/view/import/first.html
@@ -49,8 +49,8 @@
                 <div class="project-first-step">
                     <form id="uploadForm" enctype="multipart/form-data">
                         <div class="form-inline">
-                            <label for="tname" class="col-lg-2 control-label">表单名字</label>
-                            <input type="text" class="form-control " id="tname">
+                            <label for="tname" class="col-lg-2 col-lg-offset-1 control-label">表单名</label>
+                            <input type="text" class="" id="tname">
                             <input type="text" class="form-control file-input" name="fileBrowserInput" id="fileBrowserInput"
                                 readonly="readonly">
                             <input type="file" class="hidden" id="tempalteFile">
